One less class to paint tree icons.